[package]
name = "narad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socks_server"
path = "src/bin/socks_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }
