[package]
name = "narad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socks_server"
path = "src/bin/socks_server.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.38"
dns-lookup = "2.0.4"
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }
